--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -45,6 +45,8 @@ img{
   font-size:40px;
   color:#D7006A;
   line-height:100PX;
+  font-family: 'Indie Flower',
+  cursive;
 }
 
 .commit_title_required{
@@ -79,6 +81,8 @@ img{
 .News_small_title{
   font-size:10px;
   color:#D7006A;
+  font-family: 'Indie Flower',
+  cursive;
 }
 
 
@@ -102,7 +106,7 @@ img{
   
   font-size:12px;
   padding:12px 0px;
-  
+  color:grey;
   
 
   
@@ -151,6 +155,8 @@ img{
     text-align:center;
     font-size:10px;
     color:#D7006A;
+    font-family: 'Indie Flower',
+    cursive;
   }
 
   .About_title{
@@ -266,6 +272,8 @@ img{
   .Service_small_title{
      font-size:10px;
      color:#D7006A;
+    font-family: 'Indie Flower',
+    cursive;
   } 
 
   .Service_title{
@@ -283,6 +291,8 @@ img{
     font-size:10px;
     padding:10px 0px;
     color:#D7006A;
+    font-family: 'Indie Flower',
+    cursive;
   }
 
   .Blog_title{
@@ -327,6 +337,7 @@ img{
   .Blog_content{
     margin:20px auto;
     width:70%;
+    color:#4d4c4c;
     
   }
 
@@ -418,10 +429,12 @@ img{
     font-size:10px;
     margin-bottom:10px;
     color:#D7006A;
+    font-family: 'Indie Flower',
+    cursive;
   }
 
   .Company_title{
-    color:grey;
+    color:#4d4c4c;
   }
 
   .other{
@@ -487,7 +500,7 @@ img{
   text-align:center;
   padding:18px 34px;
   font-size:12px;
-  border-radius:20px;
+  border-radius:30px;
   color:white;
   box-shadow:0px 5px #8D305A;
   position:relative;
